[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dso2d15-mcp"
version = "0.1.0"
description = "MCP server for Hantek DSO2D15 (DSO2000 family) via USB SCPI / PyVISA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
dso2d15-mcp = "dso2d15_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["dso2d15_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
